packages/typ/tests/fixtures/diagnostics/0726_fcm_two_package_type_mismatch_07.ml
module type Box_eta = sig
  type t
  val value : t
end

let same_eta p q =
  let module P = (val p : Box_eta) in
  let module Q = (val q : Box_eta) in
  (P.value : Q.t)
